<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <include layout="@layout/layout_app_bar"
        android:id="@+id/signup_app_bar"></include>


    <ScrollView
        android:id="@+id/s_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_app_bar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">




            <android.support.design.widget.TextInputLayout
                android:id="@+id/full_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                app:errorTextAppearance="@style/MyTheme.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/institute_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/full_name_et"
                android:layout_marginHorizontal="10dp"
                app:errorTextAppearance="@style/MyTheme.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/institute_name_hint" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/institute_et"
                android:layout_marginHorizontal="10dp"
                app:errorTextAppearance="@style/MyTheme.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/rg_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email_et"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/dark_gray"/>


                <RadioGroup
                    android:id="@+id/gender_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/st_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/st_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>

                </RadioGroup>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/st_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/rg_layout"
                android:layout_marginHorizontal="10dp"
                app:errorTextAppearance="@style/MyTheme.TextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/role_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/st_password_et"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_role"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@color/dark_gray"/>


                <RadioGroup
                    android:id="@+id/role_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/studentRd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/student"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/teacherRd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher"/>

                </RadioGroup>


            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signUPBt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/role_layout"
                android:text="@string/signup"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Colored"

                />


            <ProgressBar
                android:id="@+id/s_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>




        </RelativeLayout>




    </ScrollView>

</RelativeLayout>