<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">




    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/s_emailEt"
        android:layout_marginBottom="30dp"
        android:elevation="5dp"
        android:background="@drawable/rounded_background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/logo"
            />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/s_emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/s_passwordEt"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-231dp"
        android:layout_marginHorizontal="10dp"
        app:errorTextAppearance="@style/MyTheme.TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/s_passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="231dp"
        android:layout_marginHorizontal="10dp"
        app:errorTextAppearance="@style/MyTheme.TextInputLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/s_login_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/s_passwordEt"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <TextView
        android:id="@+id/s_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/not_register_yet"
        android:textColor="@color/dark_gray"
        android:layout_below="@id/s_login_bt"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"/>

    <TextView
        android:id="@+id/s_signUpTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_below="@id/s_textView"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:fontFamily="@font/roboto_regular"
        android:background="?attr/selectableItemBackground"/>

    <ProgressBar
        android:id="@+id/l_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>